# c-to-glsl

./: Cargo.toml  README.md
samples/: foo.h
src/: lib.rs  main.rs
