[package]
name = "ctoglsl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ctoglsl"
doctest = false
path = "src/lib.rs"

[[bin]]
name = "ctoglslc"
test = false
doctest = false
path = "src/main.rs"


[dependencies]
lang-c = "0.11.0"